--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,8 +14,6 @@
 	// 		"type": "volume"
 	// 	}
 	// ]
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
@@ -26,6 +24,12 @@
 			"rust-lang.rust-analyzer",
 			"GitHub.copilot"
 		]
+	},
+	"postCreateCommand": "rustup component add clippy rustfmt && cargo build",
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	"features": {
+		"ghcr.io/devcontainers/features/git:1": {},
+		"ghcr.io/devcontainers/features/zsh:1": {}
 	}
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
